removed example and chapter numbers from ToC, fixed sidebar title align and logo link

--- a/assets/custom/custom.css
+++ b/assets/custom/custom.css
@@ -4,3 +4,7 @@
     margin-right: 5px;
     float: left;
 }
+
+.c-sidebar__title {
+    text-align: center;
+}
